name:                unparse-attoparsec
version:             0.1.0.0
synopsis:            Bidirectional attoparsec parsers
description:         Enriched attoparsec definitions to obtain unparsers.
homepage:            https://github.com/Lysxia/unparse-attoparsec#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
category:            Text, Parsing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:
    Data.Attoparsec.Profunctor
    Data.Attoparsec.Unparse
  build-depends:
    attoparsec,
    base >= 4.9 && < 4.10,
    bytestring,
    mtl,
    profunctor-monad
  default-language:    Haskell2010

test-suite test-aeson
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: aeson.hs
  other-modules:
    AesonParser
  default-language: Haskell2010
  build-depends:
    aeson,
    base,
    bytestring,
    constraints,
    mtl,
    profunctor-monad,
    profunctors,
    scientific,
    text,
    unordered-containers,
    unparse-attoparsec,
    vector

source-repository head
  type:     git
  location: https://github.com/Lysxia/unparse-attoparsec
